--- a/README
+++ b/README
@@ -22,9 +22,15 @@ When the luck is 71-96 then the attack is Lucky -> causes 1/3 of your power poin
 When the luck is 97-100 then the attack is Critical -> causes the double of normal attack.
 
 TODO:
+engine can handle turns
+
 
 DONE:
+extract params from Engine#initialize
+engine can initialize hero and enimies
+add engine to game
 character should have different power and energy points, and fix things
+------------------------------------
 move all thses to Character
 remove Luck, it's no use any more
 refactor under_attack
@@ -37,3 +43,4 @@ we can have a hero to fight enemy
 hero should be initialized with power and energy
 we should have a enemy to fight with hero too
 refactor hero and enemy to inherit from character
+...
