--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a Test-Driven Develpment Practive
+This is a Test-Driven Develpment Practice with Ruby(v1.9.2)
 
 ------------------------------------------
 Description:
